# officedays

./: 2025-OfficeDays.toml  Cargo.toml  README.md  example.toml
man/: officedays.1
src/: main.rs
